--- a/style.css
+++ b/style.css
@@ -1,6 +1,20 @@
+/* colour pallet -  #DB939A  #E6C983  #6C8647 #B0988C */
+
+
+
 body {
-    background-color: ;
+    background-color: white;
+    color:#333 ;
 }
+
+a {
+  color:black;
+}
+
+a:hover {
+color: #6C8647 ;
+} 
+
 #logo {
     font-size: 150px;
     text-align: center;
@@ -11,16 +25,18 @@ body {
     width: 30%;
     height: 30%;
     float: left;
-    margin: 0 20px 0 0;
-    border-radius: 50%;
+    margin: 60px 50px 20px 0;
+    border-radius: 50px 0 50px 50px;
 }
 
-ul {
+ul { /* why doesnt this work with id*/
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
     background-color: #333;
+    font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;
+    font-weight: lighter;
   }
   
   li {
@@ -29,7 +45,7 @@ ul {
   
   li a {
     display: block;
-    color: white;
+    color:white;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -38,18 +54,86 @@ ul {
   
   li a:hover {
     background-color: #949293;
-  }
+    transform: scale(1.1);
+    color: white;
+      }
+    
 
   article {
-      font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    margin: 20px;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    margin: 20px, 20px, 20px, 20px;
     padding: 20px 30px 20px 30px;
-    background-color: #F5F2F1
-    ;
+    background-color: #F5F2F1;
+    
+    }
+
+    h1 {
+      font-size: 28px;
+      font-weight: bold;
+    }
+
+    h2 {
+      font-size: 20px;
+      font-weight: bold;
+      color: #6C8647;
+    }
+
+    h3 {
+      font-size: 18px;
+      font-weight: bold;
+      color: #6C8647;
+    }
+
+    h4 {
+      font-size: 48px;
+      font-weight: bold;
+      color: white;
     }
 
     blockquote {
         margin: 40px 40px 40px 40px
     }
 
+    #avatar {
+      width: 300px;
+      height: 300px;
+      margin-left: 10px;
+    }
 
+    .pink {
+    clear: left;
+    background-color:  #DB939A;
+    width: 70%;
+    height: 3px;
+    margin-top: 30px;
+    margin: auto;
+    border-radius: 30px;
+    }
+
+    blockquote {
+      background-color: #DB939A;
+      font-weight: bold;
+      border-radius: 50px 0 50px 50px;
+      padding: 5%;
+      opacity: 80%;
+    }
+
+    #git-hub {
+      text-align: center;
+    }
+
+    #contact {
+      display: block;
+      line-height: 20px;
+
+    }
+
+    #contact {
+      background-color:#B0988C;
+      display: block;
+      margin: 0, 0, 20px, 0;
+      font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+      padding: 5px 20px 20px 20px;
+    }
+
+   
