changes to contact section

--- a/style.css
+++ b/style.css
@@ -90,8 +90,15 @@ ul { /* why doesnt this work with id*/
       color: white;
     }
 
+    h5 {
+      font-size: 18px;
+      font-weight: bold;
+      color: white;
+    }
+
     blockquote {
-        margin: 40px 40px 40px 40px
+        margin: 40px 40px 40px 40px;
+        color: #333;
     }
 
     #avatar {
@@ -123,17 +130,35 @@ ul { /* why doesnt this work with id*/
     }
 
     #contact {
-      display: block;
-      line-height: 20px;
+      display: inline;
+      line-height: 10px;
 
     }
 
     #contact {
       background-color:#B0988C;
+      color: white;
       display: block;
+      text-align: center;
       margin: 0, 0, 20px, 0;
       font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
       padding: 5px 20px 20px 20px;
     }
 
+    .contact-link {
+      
+      color:white;
+      text-align: center;
+      font-size: 18px;
+      padding: 14px 16px;
+      text-decoration: none;
+    }
+    
+    
+    .contact-link:hover {
+      background-color: #949293;
+      transform: scale(1.1);
+      color: white;
+        }
+    
    
