--- a/style.css
+++ b/style.css
@@ -2,9 +2,12 @@
 
 
 
+
 body {
     background-color: white;
     color:#333 ;
+    display: flex;
+    flex-direction: column;
 }
 
 a {
@@ -58,107 +61,153 @@ ul { /* there is default padding*/
     color: white;
       }
     
-
-  article {
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    margin: 20px, 20px, 20px, 20px;
-    padding: 20px 30px 20px 30px;
-    background-color: #F5F2F1;
-    
-    }
-
-    h1 {
-      font-size: 28px;
-      font-weight: bold;
-    }
-
-    h2 {
-      font-size: 20px;
-      font-weight: bold;
-      color: #6C8647;
-    }
-
-    h3 {
-      font-size: 18px;
-      font-weight: bold;
-      color: #6C8647;
-    }
-
-    h4 {
-      font-size: 48px;
-      font-weight: bold;
-      color: white;
-    }
-
-    h5 {
-      font-size: 18px;
-      font-weight: bold;
-      color: white;
-    }
-
-    blockquote {
-        margin: 40px 40px 40px 40px;
-        color: #333;
-    }
-
-    #avatar {
-      width: 300px;
-      height: 300px;
-      margin-left: 10px;
-    }
-
-    .pink {
-    clear: left;
-    background-color:  #DB939A;
-    width: 70%;
-    height: 3px;
-    margin-top: 30px;
-    margin: auto;
-    border-radius: 30px;
-    }
-
-    blockquote {
-      background-color: #DB939A;
-      font-weight: bold;
-      border-radius: 50px 0 50px 50px;
-      padding: 5%;
-      opacity: 80%;
-    }
-
-    #git-hub {
-      text-align: center;
-    }
-
-    #contact {
-      display: inline;
-      line-height: 10px;
-
-    }
-
-    #contact {
-      background-color:#B0988C;
-      color: white;
-      display: block;
-      text-align: center;
-      margin: 0, 0, 20px, 0;
-      font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-      padding: 5px 20px 20px 20px;
-    }
-
-    .contact-link {
-      
-      color:white;
-      text-align: center;
-      font-size: 18px;
-      padding: 14px 16px;
-      text-decoration: none;
-    }
-    
-    
-    .contact-link:hover {
-      background-color: #949293;
-      transform: scale(1.1);
-      color: white;
+      article {
+        font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        margin: 20px, 20px, 20px, 20px;
+        padding: 20px 30px 20px 30px;
+        background-color: #F5F2F1;
+        
         }
     
+        h1 {
+          font-size: 28px;
+          font-weight: bold;
+        }
     
+        h2 {
+          font-size: 20px;
+          font-weight: bold;
+          color: #6C8647;
+        }
+    
+        h3 {
+          font-size: 18px;
+          font-weight: bold;
+          color: #6C8647;
+        }
+    
+        h4 {
+          font-size: 48px;
+          font-weight: bold;
+          color: white;
+        }
+    
+        h5 {
+          font-size: 18px;
+          font-weight: bold;
+          color: white;
+        }
+    
+        blockquote {
+            margin: 40px 40px 40px 40px;
+            color: #333;
+        }
+    
+        #avatar {
+          width: 250px;
+          height: 250px;
+          margin-left: 10px;
+          margin-bottom: 50px;
+        }
+    
+        .pink {
+        clear: left;
+        background-color:  #DB939A;
+        width: 70%;
+        height: 3px;
+        margin-top: 30px;
+        margin: auto;
+        border-radius: 30px;
+        }
+    
+        
+        blockquote {
+          background-color: #DB939A;
+          font-weight: bold;
+          border-radius: 50px 0 50px 50px;
+          padding: 5%;
+          opacity: 80%;
+        }
+    
+        #git-hub {
+          text-align: center;
+        }
+    
+        #contact {
+          display: inline;
+          line-height: 10px;
+    
+        }
+    
+        #contact {
+          background-color:#B0988C;
+          color: white;
+          display: block;
+          text-align: center;
+          margin: 0, 0, 20px, 0;
+          font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+          padding: 5px 20px 20px 20px;
+        }
+    
+        .contact-link {
+          
+          color:white;
+          text-align: center;
+          font-size: 18px;
+          padding: 14px 16px;
+          text-decoration: none;
+        }
+        
+        
+        .contact-link:hover {
+          background-color: #949293;
+          transform: scale(1.1);
+          color: white;
+            }
+        
+        
+      /* Underneath is flex 
+       */
+  .navbar ul{
+    display: flex;
+    
+  }
+
+  .navbar li {
+    flex:5 
+
+}
+
+.navbar .social {  
+    flex: 1
+}
+
+
+
+@media all and (max-width:500px) {
+
+        
+  .navbar ul {
+      flex-wrap: wrap; 
+  }    
+
+  .navbar li {
+      flex: 1 1 30%;
+  }
+
+
+  .navbar .social {
+      flex:1 1 15%;
+  }
+
+
+}
+
+@media all and (max-width:200px) {
+  flex-basis: 100%;
+}
+
+.logo {
+  font-size: 75px; 
+}
+
