--- a/style.css
+++ b/style.css
@@ -1,9 +1,116 @@
-/* colour pallet -  #DB939A  #E6C983  #6C8647 #B0988C */
-
-
+colour pallet -  #DB939A  #E6C983  #6C8647 #B0988C
+/*mobile first!*/ /* Extra small devices (phones, 600px and down) */
 
 
 body {
+  background-color: white;
+  color:#333;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+}
+
+article {
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  margin: 20px, 20px, 20px, 20px;
+  padding: 20px 30px 20px 30px;
+  background-color: #F5F2F1;
+  flex: 0 1 auto;
+
+}
+
+#logo { /* letters space out too much */
+ display: flex;
+ flex-direction: row;
+ flex-wrap: nowrap;
+ justify-content: center;
+ align-items: center;
+ align-content: center;
+}
+
+.letter{
+  font-size: 80px;
+  flex: 0 1 50%;
+}
+
+ul { there is default padding */
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;
+  font-weight: lighter;
+  display: flex;
+  flex-wrap: wrap;
+  align-content: center; /* doesnt work to make items center*/
+  }
+
+li {
+  float: left;
+  flex:5
+  flex:1 1 100%;
+}
+
+li a {
+  display: block;
+  color:white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+
+li a:hover {
+  background-color: #949293;
+  transform: scale(1.1);
+  color: white;
+    }
+  
+li .social {
+      flex: 1
+      }
+
+#sara {
+  width: 30%;
+  height: 30%;
+  margin: 60px 50px 20px 0;
+  border-radius: 50px 0 50px 50px;
+}
+
+/* I want the picture in one box and about me in the other box next to it */
+.con-about {
+  display: flex;
+  /* flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  align-content: center; */
+}
+
+.it-about {
+  flex-direction: column;
+}
+
+/* Extra small devices (phones, 600px and down) */
+/* @media only screen and (max-width: 600px) {...} */
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+/* @media only screen and (min-width: 600px) {...} */
+
+/* Medium devices (landscape tablets, 768px and up) */
+/* @media only screen and (min-width: 768px) {...} */
+
+/* Large devices (laptops/desktops, 992px and up) */
+/* @media only screen and (min-width: 992px) {...} */
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+/* @media only screen and (min-width: 1200px) {...} */
+
+/* body {
     background-color: white;
     color:#333 ;
     display: flex;
@@ -16,7 +123,7 @@ a {
 
 a:hover {
 color: #6C8647 ;
-} 
+}
 
 #logo {
     font-size: 150px;
@@ -32,8 +139,8 @@ color: #6C8647 ;
     border-radius: 50px 0 50px 50px;
 }
 
-ul { /* there is default padding*/
-    list-style-type: none;
+ul { there is default padding */
+    /* list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
@@ -41,11 +148,11 @@ ul { /* there is default padding*/
     font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;
     font-weight: lighter;
   }
-  
+
   li {
     float: left;
   }
-  
+
   li a {
     display: block;
     color:white;
@@ -53,64 +160,64 @@ ul { /* there is default padding*/
     padding: 14px 16px;
     text-decoration: none;
   }
-  
-  
+
+
   li a:hover {
     background-color: #949293;
     transform: scale(1.1);
     color: white;
       }
-    
+
       article {
         font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         margin: 20px, 20px, 20px, 20px;
         padding: 20px 30px 20px 30px;
         background-color: #F5F2F1;
-        
+
         }
-    
+
         h1 {
           font-size: 28px;
           font-weight: bold;
-          color: pink;
+          color: 333;
         }
-    
+
         h2 {
           font-size: 20px;
           font-weight: bold;
           color: #6C8647;
         }
-    
+
         h3 {
           font-size: 18px;
           font-weight: bold;
           color: #6C8647;
         }
-    
+
         h4 {
           font-size: 48px;
           font-weight: bold;
           color: white;
         }
-    
+
         h5 {
           font-size: 18px;
           font-weight: bold;
           color: white;
         }
-    
+
         blockquote {
             margin: 40px 40px 40px 40px;
             color: #333;
         }
-    
+
         #avatar {
           width: 250px;
           height: 250px;
           margin-left: 10px;
           margin-bottom: 50px;
         }
-    
+
         .pink {
         clear: left;
         background-color:  #DB939A;
@@ -120,8 +227,8 @@ ul { /* there is default padding*/
         margin: auto;
         border-radius: 30px;
         }
-    
-        
+
+
         blockquote {
           background-color: #DB939A;
           font-weight: bold;
@@ -129,17 +236,17 @@ ul { /* there is default padding*/
           padding: 5%;
           opacity: 80%;
         }
-    
+
         #git-hub {
           text-align: center;
         }
-    
+
         #contact {
           display: inline;
           line-height: 10px;
-    
+
         }
-    
+
         #contact {
           background-color:#B0988C;
           color: white;
@@ -149,37 +256,35 @@ ul { /* there is default padding*/
           font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
           padding: 5px 20px 20px 20px;
         }
-    
+
         .contact-link {
-          
+
           color:white;
           text-align: center;
           font-size: 18px;
           padding: 14px 16px;
           text-decoration: none;
         }
-        
-        
+
+
         .contact-link:hover {
           background-color: #949293;
           transform: scale(1.1);
           color: white;
             }
-        
-        
-      /* Underneath is flex 
-       */
+
+
   .navbar ul{
     display: flex;
-    
+
   }
 
   .navbar li {
-    flex:5 
+    flex:5
 
 }
 
-.navbar .social {  
+.navbar .social {
     flex: 1
 }
 
@@ -187,10 +292,10 @@ ul { /* there is default padding*/
 
 @media all and (max-width:500px) {
 
-        
+
   .navbar ul {
-      flex-wrap: wrap; 
-  }    
+      flex-wrap: wrap;
+  }
 
   .navbar li {
       flex: 1 1 30%;
@@ -202,13 +307,15 @@ ul { /* there is default padding*/
   }
 
 
-}
+} */
 
-@media all and (max-width:200px) {
+/* @media all and (max-width:200px) {
   flex-basis: 100%;
 }
+ */
 
-.logo {
-  font-size: 75px; 
-}
+
+/* .logo {
+  font-size: 75px;
+} */
 
