--- a/style.css
+++ b/style.css
@@ -22,21 +22,23 @@ article {
 
 }
 
-#logo { /* letters space out too much */
+.logo { /* letters space out too much and want them to increase insize */
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: center;
  align-items: center;
  align-content: center;
+ margin-left: 30%;
+ margin-right: 30%;
 }
 
 .letter{
-  font-size: 80px;
-  flex: 0 1 50%;
+  font-size: 120px;
+  flex: 1 1 auto;
 }
 
-ul { there is default padding */
+ul { 
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -75,20 +77,140 @@ li .social {
       }
 
 #sara {
-  width: 30%;
-  height: 30%;
-  margin: 60px 50px 20px 0;
+  width: 50%;
+  height: 50%;
+  margin: 10px 50px 10px 0;
   border-radius: 50px 0 50px 50px;
+  display: flex;
+  flex: 1 1 auto;
 }
 
-/* I want the picture in one box and about me in the other box next to it */
+
+
+.con-work {
+  display:flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+
+}
+
+.ite-work {
+  flex: 0 1 auto;
+
+}
+
+#avatar {
+  width: 250px;
+  height: 250px;
+  margin: 10px;
+}
+
+h1 {
+  
+  font-size: 28px;
+  font-weight: bold;
+  color: #6C8647;
+}
+
+h2 {
+  font-size: 20px;
+  font-weight: bold;
+  color: #6C8647;
+}
+
+h3 {
+  font-size: 18px;
+  font-weight: bold;
+  color: #6C8647;
+}
+
+h4 {
+  font-size: 48px;
+  font-weight: bold;
+  color: white;
+}
+
+h5 {
+  font-size: 18px;
+  font-weight: bold;
+  color: white;
+}
+
+blockquote {
+    margin: 40px 40px 40px 40px;
+    color: #333;
+}
+
+#avatar {
+  width: 250px;
+  height: 250px;
+  margin-left: 10px;
+  margin-bottom: 50px;
+}
+
+.pink {
+clear: left;
+background-color:  #DB939A;
+width: 70%;
+height: 3px;
+margin-top: 30px;
+margin: auto;
+border-radius: 30px;
+}
+
+
+blockquote {
+  background-color: #DB939A;
+  font-weight: bold;
+  border-radius: 50px 0 50px 50px;
+  padding: 5%;
+  opacity: 80%;
+}
+
+#git-hub {
+  text-align: center;
+}
+
+#contact {
+  display: inline;
+  line-height: 10px;
+
+}
+
+#contact {
+  background-color:#B0988C;
+  color: white;
+  display: block;
+  text-align: center;
+  margin: 0, 0, 10px, 0;
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  padding: 5px 10px 20px 10px;
+}
+
+.contact-link {
+
+  color:white;
+  text-align: center;
+  font-size: 18px;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+
+.contact-link:hover {
+  background-color: #949293;
+  transform: scale(1.1);
+  color: white;
+    }
+/*
+I want the picture in one box and about me in the other box next to it, set media query once it gets too big 
 .con-about {
   display: flex;
   /* flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  align-content: center; */
+  align-content: center; 
 }
 
 .it-about {
