--- a/style.css
+++ b/style.css
@@ -164,6 +164,7 @@ blockquote {
     margin: 0, 0, 20px, 0;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     padding: 5px 20px 20px 20px;
+    
 }
 
 .contact-link {
@@ -225,9 +226,16 @@ blockquote {
     font-size: 95%; 
   }
   
+  h4 {
+    font-size: 38px;
+    }
+
+    .contact-link {
+        font-size: 16px;
+    }
 }
 
-@media all and (max-width:389px) {
+@media all and (max-width:390px) {
 .heading {
     font-size: 95%;
     font-weight: bold;
@@ -236,6 +244,11 @@ blockquote {
   p {
     font-size: 90%; 
   }
+
+  .contact-link {
+    font-size: 12px;
+}
+
 }
 
 @media all and (max-width:325px) {
@@ -272,7 +285,3 @@ blockquote {
     font-size: 32px;
   }
 }
-
-
-
-.
