--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ ul { /* there is default padding*/
 article {
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     padding: 20px 30px 20px 30px;
-    background-color: #F5F2F1;
+    background-color: #F5F2F1;`
     margin-left: 15px;
     margin-right: 15px
 }
