--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 /* color pallet -  #DB939A  #E6C983  #6C8647 #B0988C */
 
+
 html, body {
     width: 100%;
 }
@@ -74,7 +75,7 @@ ul { /* there is default padding*/
 article {
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     padding: 20px 30px 20px 30px;
-    background-color: #F5F2F1;`
+    background-color: #F5F2F1;
     margin-left: 15px;
     margin-right: 15px
 }
@@ -164,7 +165,15 @@ blockquote {
     margin: 0, 0, 20px, 0;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     padding: 5px 20px 20px 20px;
-    
+
+}
+ 
+.flex-cont{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: flex-end;
+    align-content: center;
 }
 
 .contact-link {
@@ -174,6 +183,7 @@ blockquote {
     font-size: 18px;
     padding: 14px 16px;
     text-decoration: none;
+    flex-wrap: 0 0 auto;
 }
 
 
@@ -218,7 +228,7 @@ blockquote {
       flex:1 1 15%;
   }
 
-  .letter {
+    .letter {
     font-size: 100px;
   }
 
@@ -227,15 +237,17 @@ blockquote {
   }
   
   h4 {
-    font-size: 38px;
+    font-size: 40px;
     }
 
     .contact-link {
         font-size: 16px;
     }
+
+
 }
 
-@media all and (max-width:390px) {
+@media all and (max-width:395px) {
 .heading {
     font-size: 95%;
     font-weight: bold;
@@ -245,10 +257,18 @@ blockquote {
     font-size: 90%; 
   }
 
-  .contact-link {
-    font-size: 12px;
-}
+  h4 {
+    font-size: 30px;
+    }
 
+  .contact-link {
+    font-size: 14px;
+    }
+
+    #item-con3 {
+        display: block;
+        }
+    
 }
 
 @media all and (max-width:325px) {
@@ -256,11 +276,23 @@ blockquote {
     .letter {
       font-size: 80px;
     }
-  }
+  
 
   p {
     font-size: 85%; 
   }
+
+      h4 {
+        font-size: 25px;
+        }
+    
+      .contact-link {
+        font-size: 10px;
+        }
+
+}
+
+    
 
   @media all and (max-width:280px) {
 
@@ -272,7 +304,10 @@ blockquote {
         font-size: 59%;
         font-weight: bold;
       }
-   
+
+      h4 {
+        font-size: 16px;
+        }
   }
 
   p {
