--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-/* color pallet -  #DB939A  #E6C983  #6C8647 #B0988C */
-
-
 html, body {
     width: 100%;
 }
@@ -15,18 +12,12 @@ body {
     color:#333 ;
 }
 
-/* #scratch { /*doesn't work with bigger screen 
-    width: 80vw;
-    height: 60vw;
-}   */
-
-
 a {
-  color:black;
+     color:black;
 }
 
 a:hover {
-color: #6C8647 ;
+    color: #6C8647 ;
 }
 
 #logo {
@@ -43,7 +34,7 @@ color: #6C8647 ;
     border-radius: 50px 0 50px 50px;
 }
 
-ul { /* there is default padding*/
+ul {  
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -51,26 +42,26 @@ ul { /* there is default padding*/
     background-color: #333;
     font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;
     font-weight: lighter;
-  }
+}
 
-  li {
+li {
     float: left;
-  }
+}
 
-  li a {
+li a {
     display: block;
     color:white;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-  }
+}
 
 
-  li a:hover {
+li a:hover {
     background-color: #949293;
     transform: scale(1.1);
     color: white;
-      }
+}
 
 article {
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -78,13 +69,6 @@ article {
     background-color: #F5F2F1;
     margin-left: 15px;
     margin-right: 15px
-}
-
-@media all and (min-width:576px) {
-    article {
-        margin-left: 40px;
-        margin-right: 40px;
-    }
 }
 
 h1 {
@@ -129,13 +113,13 @@ blockquote {
 }
 
 .pink {
-clear: left;
-background-color:  #DB939A;
-width: 70%;
-height: 3px;
-margin-top: 30px;
-margin: auto;
-border-radius: 30px;
+    clear: left;
+    background-color:  #DB939A;
+    width: 70%;
+    height: 3px;
+    margin-top: 30px;
+    margin: auto;
+    border-radius: 30px;
 }
 
 
@@ -167,7 +151,7 @@ blockquote {
     padding: 5px 20px 20px 20px;
 
 }
- 
+
 .flex-cont{
     display: flex;
     flex-flow: row wrap;
@@ -186,58 +170,57 @@ blockquote {
     flex-wrap: 0 0 auto;
 }
 
-
 .contact-link:hover {
     background-color: #949293;
     transform: scale(1.1);
     color: white;
-    }
-
-
-      /* Underneath is flex
-       */
-  .navbar ul{
+}
+    
+.navbar ul{
     display: flex;
+}
 
-  }
-
-  .navbar li {
+.navbar li {
     flex:5
-
 }
 
 .navbar .social {
     flex: 1
 }
 
+@media all and (min-width:576px) {
 
+    article {
+        margin-left: 40px;
+        margin-right: 40px;
+    }
+}
 
 @media all and (max-width:500px) {
 
+    .navbar ul {
+        flex-wrap: wrap;
+    }
 
-  .navbar ul {
-      flex-wrap: wrap;
-  }
-
-  .navbar li {
-      flex: 1 1 30%;
-  }
+    .navbar li {
+        flex: 1 1 30%;
+    }
 
 
-  .navbar .social {
-      flex:1 1 15%;
-  }
+    .navbar .social {
+        flex:1 1 15%;
+    }
 
     .letter {
-    font-size: 100px;
-  }
+        font-size: 100px;
+    }
 
-  p {
-    font-size: 95%; 
-  }
+    p {
+        font-size: 95%; 
+    }
   
-  h4 {
-    font-size: 40px;
+    h4 {
+        font-size: 40px;
     }
 
     .contact-link {
@@ -248,25 +231,26 @@ blockquote {
 }
 
 @media all and (max-width:395px) {
-.heading {
-    font-size: 97%;
-    font-weight: bold;
-  }
-
-  h1 {
-      font-size: 95%;
-  }
-
-  p {
-    font-size: 90%; 
-  }
-
-  h4 {
-    font-size: 30px;
+    
+    .heading {
+        font-size: 97%;
+        font-weight: bold;
     }
 
-  .contact-link {
-    font-size: 14px;
+    h1 {
+        font-size: 95%;
+    }
+
+    p {
+        font-size: 90%; 
+    }
+
+    h4 {
+        font-size: 30px;
+    }
+
+    .contact-link {
+        font-size: 14px;
     }
 
     #item-con3 {
@@ -278,55 +262,55 @@ blockquote {
 @media all and (max-width:325px) {
 
     .letter {
-      font-size: 80px;
+        font-size: 80px;
     }
   
     h1 {
         font-size: 90%;
     }
 
-  p {
-    font-size: 85%; 
-  }
+    p {
+        font-size: 85%; 
+    }
 
-      h4 {
+    h4 {
         font-size: 28px;
-        }
+    }
     
-      .contact-link {
+    .contact-link {
         font-size: 10px;
-        }
+    }
 
 }
-
-    
-
-  @media all and (max-width:280px) {
+ 
+@media all and (max-width:280px) {
 
     .letter {
-      font-size: 48px;
+        font-size: 48px;
     }
 
     .heading {
         font-size: 59%;
         font-weight: bold;
-      }
+    }
 
-      h1 {
+    h1 {
         font-size: 85%;
     }
-      h4 {
+      
+    h4 {
         font-size: 16px;
-        }
-  }
+    }
+  
+    p {
+        font-size: 80%; 
+    }
 
-  p {
-    font-size: 80%; 
-  }
+}
 
 @media all and (max-width:200px) {
 
-  .letter {
-    font-size: 32px;
-  }
+    .letter {
+        font-size: 32px;
+    }
 }
