--- a/style.css
+++ b/style.css
@@ -32,6 +32,9 @@ a:hover {
     float: left;
     margin: 60px 50px 20px 0;
     border-radius: 50px 0 50px 50px;
+    max-width: 200px;
+    max-height: 384px;
+    
 }
 
 ul {  
@@ -108,8 +111,10 @@ blockquote {
 #avatar {
     width: 80vh;
     height: 80vh;
-    margin-left: 10px;
+    margin-left: 20px;
     margin-bottom: 50px;
+    max-width: 250px;
+    max-height: 250px;
 }
 
 .pink {
