added em to padding

--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ blockquote {
     background-color: #DB939A;
     font-weight: bold;
     border-radius: 50px 0 50px 50px;
-    padding: 5%;
+    padding: 2em;
     opacity: 80%;
 }
 
